# TabLog

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsup.config.ts
docs/: architecture.md  cli.md  getting-started.md  js-api.md  llm-api-plan.md  python-api.md  rag-debugging-plan.md  testing-plan.md
python/: pyproject.toml
python/tablog/: __init__.py  detector.py  langchain.py  llamaindex.py  middleware.py
rust/: README.md
src/: cli.ts  detector.ts  export.ts  filter.ts  formatter.ts  index.ts  network.ts  server.ts  setup.ts
