[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablogger"
version = "0.1.7"
description = "Universal logging function for Python — tablog() works everywhere"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["logging", "debug", "unified", "fullstack", "devtools", "tablog"]
dependencies = ["websocket-client>=1.6"]

[project.optional-dependencies]
fastapi = ["starlette>=0.20"]
flask = ["flask>=2.0"]
